update restricted service template

--- a/templates/service-restricted.j2
+++ b/templates/service-restricted.j2
@@ -16,8 +16,9 @@ set default_service = {
   'CapabilityBoundingSet': '',
   'EnvironmentFile': '/dev/null',
   'ExecStart': '/usr/bin/env true',
-  'LimitNOFILE': "131072:524288",
+  'LimitNOFILE': '131072:524288',
   'LimitNPROC': '32768:131072',
+  'LimitCORE': '0',
   'LockPersonality': 'yes',
   'MemoryDenyWriteExecute': 'yes',
   'NoNewPrivileges': 'yes',
